# photoorganizer

./: .gitignore  Makefile  README.md  cli.py  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
onnxruntime/: __init__.py
photo_organizer/: __init__.py  classifier.py  cluster.py  db.py  events.py  face.py  location.py  ocr.py  picker.py  scan.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_cluster.py  test_db.py  test_events.py  test_face.py  test_location.py  test_ocr.py  test_scan.py
ui/: index.html  main.js  package.json  preload.js
ui/src/: App.jsx  index.css
ui/src/components/: ImageGrid.jsx  Sidebar.jsx
